welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:14: error: ';' expected but 'if' found.
	}if (litMessage=="B")
         ^BDRBuggle:24: error: ';' expected but 'if' found.
	}if (litMessage=="X")
         ^BDRBuggle:29: error: ';' expected but 'if' found.
	}if (litMessage=="Y")
         ^BDRBuggle:33: error: ';' expected but 'if' found.
	}if (litMessage=="Z")
         ^BDRBuggle:52: error: Unmatched closing brace '}' ignored here
	}
        ^